--- a/img-compress.html
+++ b/img-compress.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free and fast online image compression tool. Compress PNG, JPG, JPEG images without quality loss. SEO-optimized tool with AdSense support.">
-  <meta name="keywords" content="image compression, online image optimizer, compress JPG, compress PNG, reduce image size">
-  <meta name="author" content="Your Name">
+  <meta name="keywords" content="image compression, online image optimizer, compress JPG, compress PNG, reduce image size, image compressor, compressor,  image reduction, rudce image, compress file">
+  <meta name="author" content="Zero">
   <title>Responsive Image Compression Tool</title>
 
   <!-- SEO and Performance Enhancements -->
@@ -113,8 +113,8 @@
       <!-- Replace ca-pub-XXXXXXXXXXXXXXXX with your AdSense ID -->
       <ins class="adsbygoogle"
         style="display:block"
-        data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-        data-ad-slot="1234567890"
+        data-ad-client="ca-pub-5380816479485129"
+        data-ad-slot="1197701405"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
