--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <section class="tools-section">
   <div class="tool-card">
-    <h3><a href="/img-compress.html" style="text-decoration: none; color: inherit;">Image Compressor</a></h3>
+    <h3><a href="/Tool/img-compress.html" style="text-decoration: none; color: inherit;">Image Compressor</a></h3>
     <p>Reduce image size without quality loss.</p>
     <a href="image-compression.html">Try Now</a>
   </div>
