--- a/img-compress.html
+++ b/img-compress.html
@@ -113,8 +113,8 @@
       <!-- Replace ca-pub-XXXXXXXXXXXXXXXX with your AdSense ID -->
       <ins class="adsbygoogle"
         style="display:block"
-        data-ad-client="ca-pub-5380816479485129"
-        data-ad-slot="1197701405"
+        data-ad-client="ca-pub-XXXXXXXXXXXXXXXXX"
+        data-ad-slot="123456789"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
