--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Homepage for online tools including image and PDF utilities.">
   <meta name="keywords" content="image tools, pdf tools, compress images, convert pdfs, free online tools">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Zero">
   <title>All-in-One Tools Hub</title>
   <style>
     * {
